# Pyevolve

./: .gitignore  README.md  pyproject.toml  run_pylint.py  runtests.py
pyevolve/: FunctionSlot.py  GPopulation.py  GSimpleGA.py
src/pyevolve/: __init__.py
tests/: test_allele.py  test_crossovers.py  test_genomes.py
